--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
 		"compression": "1.6.2",
 		"cors": "^2.8.1",
 		"express": "4.14.0",
-		"nedb": "*",
+		"nedb": "^1.8.0",
 		"request": "^2.79.0",
 		"request-promise": "^4.1.1",
 		"body-parser": "^1.15.2",
-		"lodash": "^4.17.2"
+		"lodash": "^4.17.4"
 	},
 	"keywords": [
 		"node",
